--- a/package.json
+++ b/package.json
@@ -10,11 +10,10 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-navigation/native": "^6.1.18",
-    "@react-navigation/stack": "^6.4.1",
+    "@react-native-async-storage/async-storage": "^2.0.0",
     "react": "18.3.1",
     "react-native": "0.75.4",
-    "react-native-safe-area-context": "^4.11.1",
+    "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "^3.34.0"
   },
   "devDependencies": {
@@ -31,6 +30,7 @@
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
+    "react-native-dotenv": "^3.4.11",
     "react-test-renderer": "18.3.1",
     "typescript": "5.0.4"
   },
